unpackaged/main/default/objects/OpportunityLineItem/fields/Codigo_del_producto__c.field-meta.xml
<CustomField>
    <fullName>Codigo_del_producto__c</fullName>
    <formula>PricebookEntry.Product2.Codigo_de_Producto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código del Producto</label>
    <type>Text</type>
</CustomField>