unpackaged/main/default/objects/OpportunityLineItem/fields/Tiene_Vivienda__c.field-meta.xml
<CustomField>
    <fullName>Tiene_Vivienda__c</fullName>
    <formula>IF(NOT(ISBLANK(Vivienda__c)), 1, 0)</formula>
    <label>Tiene Vivienda</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>