unpackaged/main/default/objects/OpportunityLineItem/fields/Tipo_de_Producto__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Producto__c</fullName>
    <label>Tipo de Producto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vivienda</fullName>
            </value>
            <value>
                <fullName>Paquetes</fullName>
            </value>
            <value>
                <fullName>Promociones de Venta</fullName>
            </value>
            <value>
                <fullName>Regalos MKT</fullName>
            </value>
            <value>
                <fullName>Complementos</fullName>
            </value>
            <value>
                <fullName>Otros Gastos</fullName>
            </value>
            <value>
                <fullName>Casa Muestra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>