unpackaged/main/default/objects/OpportunityLineItem/fields/Vivienda__c.field-meta.xml
<CustomField>
    <fullName>Vivienda__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vivienda</label>
    <referenceTo>Vivienda__c</referenceTo>
    <relationshipLabel>Producto de oportunidad</relationshipLabel>
    <relationshipName>Producto_de_oportunidad</relationshipName>
    <type>Lookup</type>
</CustomField>